# desk.md

./: .claude-refactor-state.json  .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-frontend.yml  ci-rust.yml  ci.yml  release.yml
deploy/: .env.example  .gitignore  README.md  docker-compose.yml
outlook-addin/: README.md  commands.js  manifest.xml  package-lock.json  package.json  taskpane.html  taskpane.js
scripts/: install-latest.sh  screenshots.mjs
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: desk-mcp-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  app_config.rs  data_root.rs  desk_commands.rs  desk_tools.rs  drop_view.m  drop_view.rs  lib.rs  mcp.rs  mcp_core.rs  secrets.rs
src/app/: app-shell.tsx  globals.css  providers.tsx
src/components/: global-search.tsx
src/hooks/: index.ts  use-context-search.ts  use-editor-save-shortcut.ts  use-folder-ai-states.ts  use-internal-link-handler.ts  use-query-invalidator.ts  use-search-index.ts  use-secondary-sidebar-resize.ts  use-secondary-sidebar.ts  use-secret-hydration.ts  use-suppress-context-menu.ts  use-update-checker.ts
src/i18n/: de.json  en.json  fr.json  index.ts
src/lib/: design-tokens.ts  enterprise-ui.ts  mcp-tools.ts  mcp.ts
(+209 files in other folders)
